class DiagnosticResult {
  final String interpretation;
  final String possibleCauses;
  final String troubleshootingSteps;

  DiagnosticResult({
    required this.interpretation,
    required this.possibleCauses,
    required this.troubleshootingSteps,
  });
}
